--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&family=Libre+Baskerville&display=swap');
 /* reset css */
 html{
 font-size: 62.5%;
@@ -6,7 +7,7 @@ scroll-behavior: smooth;
 background: #fff url(https://img.freepik.com/vecteurs-libre/fond-abstrait-blanc_23-2148806276.jpg?size=626&ext=jpg)no-repeat fixed center center / cover;
 }
 body{
-    font: 1.6rem 'Montserrat', sans-serif;
+    font: 1.6rem 'Inconsolata', sans-serif;
     margin: 0;
     
 }
@@ -32,11 +33,11 @@ a{
 /* thème */
 header img{
     position: absolute;
-    top: 4rem;
+    top: 2rem;
     left: 5rem;
     z-index: 2;
-    width: 7rem;
-    height: 7rem;
+    width: 5rem;
+    height: 5rem;
     clip-path: circle(50%);
     display: block;
 }
@@ -44,12 +45,15 @@ header{
     line-height: 5.5rem;
     text-align: center;
     color: rgb(0, 0, 0);
-    background: #e5e5e5;
+    background: linear-gradient(to bottom, rgba(57, 137, 202, 0.589) 0%,rgba(255,255,255,0) 100%);;
     font-weight: 100;
-    padding: 1rem;
-    position: fixed;
+    padding: 3rem;
+    /*position: fixed;*/
     width: 100%;
     top: 0;
+}
+h1{
+    font: 4rem'Libre Baskerville', sans-serif;
 }
 h2, h3, ul, li{
     text-align: center;
@@ -63,27 +67,29 @@ article{
     max-width: 90rem;
     padding: 2rem;
     border: solid 0.1rem transparent;
-    background-color: #fafafa;
+    background-color: #eff6fa;
     margin: 0 auto 2rem;
     box-shadow: 0 0 1.0rem var(--color-border);
-    margin-top: 2rem;
-    border-radius: 3rem;
+    margin-top: 4rem;
+    border-radius: 2rem;
 }
 article:first-child{
-    margin-top: 17rem;
+    margin-top: 5rem;
 }
 h3{
-    background-color: #dd574e;
+    background-color: #6393c0;
     color: #fff;
-    border-radius: 2rem;
+    border-radius: 1rem;
     
 }
 /* pied de page */
 footer{
-    background-color: #e5e5e5;
-    padding: 3rem;
+    background-color: #8ebce15e;
+    padding: 1rem;
+    margin-top: 4rem;
+    
 }
 footer p{
     color: rgb(3, 2, 2);
-    text-align: center;
+    text-align: left;
 }
