--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,17 @@ header img{
     height: 5rem;
     clip-path: circle(50%);
     display: block;
+    -moz-transition-duration:1s;
+    -moz-transition-timing-function:ease;
+    -webkit-transition-duration:1s;
+    -webkit-transition-timing-function:ease;
+    transition-duration:1s;
+    transition-timing-function:ease;
+}
+header img:hover{
+    -moz-transform:rotate(360deg);
+    -webkit-transform:rotate(360deg);
+    transform:rotate(360deg);
 }
 header{
     line-height: 5.5rem;
