--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a{
 header img{
     position: absolute;
     top: 2rem;
-    left: 20rem;
+    left: 15rem;
     z-index: 2;
     width: 8rem;
     height: 8rem;
@@ -56,7 +56,7 @@ header{
     line-height: 5.5rem;
     text-align: center;
     color: rgb(0, 0, 0);
-    background: linear-gradient(to bottom, rgba(57, 137, 202, 0.589) 0%,rgba(255,255,255,0) 100%);;
+    background: linear-gradient(to bottom, rgba(57, 137, 202, 0.589) 0%,rgba(255,255,255,0) 100%);
     font-weight: 100;
     padding: 3rem;
     /*position: fixed;*/
@@ -76,12 +76,13 @@ p{
 }
 article{
     max-width: 90rem;
+    min-height: 5rem;
     padding: 2rem;
     border: solid 0.1rem transparent;
     background-color: #eff6fa;
     margin: 0 auto 2rem;
     box-shadow: 0 0 1.0rem var(--color-border);
-    margin-top: 4rem;
+    margin-top: 5rem;
     border-radius: 2rem;
 }
 article:first-child{
@@ -91,6 +92,13 @@ h3{
     background-color: #6393c0;
     color: #fff;
     border-radius: 1rem;
+    
+}
+#gallery{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 0 auto;
+    min-width: 30rem;
     
 }
 /* pied de page */
@@ -104,3 +112,24 @@ footer p{
     color: rgb(3, 2, 2);
     text-align: left;
 }
+@media screen and (max-width: 47rem){
+    header{
+        padding: 10rem;
+    }
+    h1, h2{
+        font-size: 3rem;
+    }
+    header img{
+        position: absolute;
+        top: 2rem;
+        left: 3rem;
+        width: 6rem;
+        height: 6rem;
+    }
+    #gallery{
+        grid-template-columns: repeat(2, 2fr);
+    }
+    article:first-child{
+        margin-top: 1rem;
+    }
+    }
